# cloud-cost-remediation

./: .env.example  .gitignore  DESIGN_AND_ARCHITECTURE_v1.0.md  Dockerfile.api  Dockerfile.job  README.md  azure-pipelines.yml  docker-compose.yml  prompts.md  pyproject.toml
api/: config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py
api/analysis/: __init__.py  adf_pipelines.py  aks.py  app_services.py  azure_functions.py  base.py  cosmos_db.py  logic_apps.py  managed_disks.py  sql_databases.py  storage_accounts.py  virtual_machines.py
api/db/: base.py  factory.py  mysql_provider.py  postgresql_provider.py  sqlite_provider.py  sqlserver_provider.py
api/routers/: costs.py  dashboard.py  findings.py  jobs.py  resources.py  scripts.py
api/services/: azure_auth.py  cost_export.py  http_client.py  metrics.py  resource_export.py  storage.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/components/: CostSummary.jsx  JobsHistory.jsx  ResourceTable.jsx  ResourcesSummary.jsx  (+1 more)
docs/: detailed_architecture_presentation.md  presentation.pptx
infra/: acr.tf  container_app.tf  keyvault.tf  main.tf  outputs.tf  storage.tf  variables.tf
tests/: conftest.py  test_analysis_analyzers.py  test_analysis_base.py  test_analysis_pipeline.py  test_config.py  test_routers_costs_resources.py  test_routers_dashboard.py  test_routers_findings.py  test_routers_jobs.py  test_routers_scripts.py  test_services_azure_auth.py  test_services_cost_export.py  test_services_http_client.py  test_services_metrics.py  test_services_resource_export.py  test_services_storage.py
(+1 files in other folders)
