[project]
name = "cloud-cost-optimizer"
version = "0.1.0"
description = "Azure Cloud Cost Optimizer & Remediation Engine"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "httpx>=0.27.0",
    "azure-identity>=1.16.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-storage-blob>=12.20.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
]
# Database drivers – install the one matching DATABASE_PROVIDER
postgresql = ["psycopg2-binary>=2.9.9"]
mysql      = ["pymysql>=1.1.0"]
sqlserver  = ["pyodbc>=5.1.0"]
all-db     = ["psycopg2-binary>=2.9.9", "pymysql>=1.1.0", "pyodbc>=5.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["api"]
omit = [
    "api/db/*",
    "api/__init__.py",
    "api/logging_config.py",
    "api/dependencies.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
